--- a/selllogin.html
+++ b/selllogin.html
@@ -36,7 +36,7 @@ background-size: cover;
                 <input type="email" class="email ele" placeholder="youremail@email.com" required>
                         <font size="5" color="red">Password</font>
                 <input type="password"class="password ele" placeholder="password" required>
-                <form action="index.html">
+                <form action="selling.html">
                     <button class="clkbtn">Login</button>
             </div>
 
@@ -50,7 +50,7 @@ background-size: cover;
                 <input type="password" placeholder="password">
                 <input type="password"class="password ele"placeholder="Confirm password">
                 <label>Show Password<input type="checkbox" name=" "></label>
-                <form action="index.html">
+                <form action="selling.html">
                     <button class="clkbtn">Signup</button>
             </div>
 
