--- a/selling.html
+++ b/selling.html
@@ -33,7 +33,7 @@
       </div>
       <nav>
         <ul id="menu">
-          <li><a href="index.html">Main Page</a></li>
+          <li><a href="indexbuy.html">Main Page</a></li>
           <li id="menu_active"><a href="selling.html">Selling Estate</a></li>
           <li><a href="feedback.html">Feedback</a></li>
           <li class="end"><a href="contacts.html">Contact Us</a></li>
