--- a/selling.html
+++ b/selling.html
@@ -23,7 +23,7 @@
   <div class="main">
     <!-- header -->
     <header>
-      <h1><a href="index.html" id="logo"></a></h1>
+      <h1><a href="selling.html" id="logo"></a></h1>
       <div class="wrapper">
         <ul id="icons">
           <li><a href="#" class="normaltip"><img src="images/icon1.jpg" alt=""></a></li>
